Fixed some edit commands for OOPIF-<webivew> (Mac)

OS edit commands for Mac are sent through WebContentsImpl which sends them to the
focused RenderFrame. This however does not play well with nested (inner)
WebContentses as GetFocusedFrame() returns the focused frame within the frame
tree of the WebContents only.

This CL fixes the issue with OOPIF-webviews by calling the corresponding edit
commands on the focused RenderWidgetHostDelegate (WebContentsImpl).

The CL also enables the WebViewInteractiveTest.EditCommands which was failing
on OOPIF-<webview>.

BUG=721984, 582562

Review-Url: https://codereview.chromium.org/2878153002
Cr-Commit-Position: refs/heads/master@{#472131}

Former-commit-id: 7b9e08e23f6e26b385619215fc80ac93d374a604